@@ -18,9 +18,12 @@
 package org.apache.pig.backend.hadoop.executionengine.spark;
 
 import java.io.File;
+import java.io.FileInputStream;
 import java.io.IOException;
+import java.io.InputStreamReader;
 import java.io.PrintStream;
 import java.net.URL;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.ArrayList;
@@ -595,6 +598,30 @@ public class SparkLauncher extends Launcher {
             } else {
                 LOG.warn("SPARK_HOME is not set");
             }
+
+            String sparkConfEnv = System.getenv("SPARK_CONF_DIR");
+            if( sparkConfEnv == null && sparkHome != null) {
+                sparkConfEnv = sparkHome + "/conf";
+            }
+            if( sparkConfEnv != null ) {
+                try {
+                    Properties props = new Properties();
+                    File propsFile = new File (sparkConfEnv,"spark-defaults.conf");
+                    if (propsFile.isFile()) {
+                        try (InputStreamReader isr = new InputStreamReader( 
+                            new FileInputStream(propsFile), StandardCharsets.UTF_8)) {
+                            props.load(isr);
+                            for (Map.Entry<Object, Object> e : props.entrySet()) {
+                                pigCtxtProperties.setProperty(e.getKey().toString(), 
+                                                     e.getValue().toString().trim());
+                            }
+                        }
+                    }
+                } catch (IOException ex) {
+                  LOG.warn("Reading $SPARK_CONF_DIR/spark-defaults.conf failed");
+                }
+            }
+
 
             //Copy all spark.* properties to SparkConf
             for (String key : pigCtxtProperties.stringPropertyNames()) {
